# embed_and_vector_database_practice

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
qdrant/: config.yaml
src/app/: main.py
src/app/embedding/: model.py
src/app/qdrant/: qdrant.py
