[tool.poetry]
name = "2-3embedding"
version = "0.1.0"
description = ""
authors = ["TinyMurky <murky0830@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }, { include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^3.0.1"
qdrant-client = "^1.9.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
